--- a/src/Prova.App/Views/Pedidos/Index.cshtml
+++ b/src/Prova.App/Views/Pedidos/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<Prova.App.ViewModels.PedidoViewModel>
+﻿@using Prova.App.Extensions
+@model IEnumerable<Prova.App.ViewModels.PedidoViewModel>
 
 @{
     ViewData["Title"] = "Lista de Pedidos";
@@ -11,21 +12,23 @@
 </p>
 <table class="table table-hover">
     <thead class="thead-dark">
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.NomeProduto)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Valor)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DataVencimento)
-            </th>
-            <th></th>
-        </tr>
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.NomeProduto)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Valor)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.DataVencimento)
+        </th>
+        <th>Situação</th>
+        <th class="text-right">Ações</th>
+    </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+    @foreach (var item in Model)
+    {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.NomeProduto)
@@ -34,14 +37,36 @@
                 @item.Valor.ToString("C")
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.DataVencimento)
+                @this.DataMascara(item.DataVencimento)
             </td>
+            <td style="@this.CorValidade(item.DataVencimento)">
+            </td>
+
             <td class="text-right">
+                <a class="btn btn-success" style="display: @this.DisplayDesconto(item.DataVencimento)" asp-action="Edit" asp-route-id="@item.Id"><span class="fa fa-dollar-sign"></span></a>
                 <a class="btn btn-warning" asp-action="Details" asp-route-id="@item.Id"><span class="fa fa-search"></span></a>
                 <a class="btn btn-info" asp-action="Edit" asp-route-id="@item.Id"><span class="fa fa-pencil-alt"></span></a>
                 <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id"><span class="fa fa-trash"></span></a>
             </td>
         </tr>
-}
+    }
     </tbody>
 </table>
+<p></p>
+<h2>Legenda de Vencimento</h2>
+<p></p>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-1" style="background-color: green"></div>
+        <div class="col-3">Válido</div>
+    </div>
+    <div class="row">
+        <div class="col-lg-1" style="background-color: orange"></div>
+        <div class="col-3">Vencendo</div>
+    </div>
+    <div class="row">
+        <div class="col-lg-1" style="background-color: red"></div>
+        <div class="col-3">Vencido</div>
+    </div>
+</div>
+
