--- a/src/Prova.App/Views/Pedidos/Desconto.cshtml
+++ b/src/Prova.App/Views/Pedidos/Desconto.cshtml
@@ -34,7 +34,7 @@
                 <input type="hidden" asp-for="NomeProduto" class="form-control" />
             </div>
             <div class="form-group">
-                <label class="control-label">Adicionar desconto</label>
+                <label>Adicionar desconto</label>
                 <input asp-for="Valor" class="form-control" />
                 <span asp-validation-for="Valor" class="text-danger"></span>
             </div>
