--- a/src/Prova.App/Views/Pedidos/Edit.cshtml
+++ b/src/Prova.App/Views/Pedidos/Edit.cshtml
@@ -13,17 +13,17 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="NomeProduto" class="control-label"></label>
+                <label asp-for="NomeProduto"></label>
                 <input asp-for="NomeProduto" class="form-control" />
                 <span asp-validation-for="NomeProduto" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Valor" class="control-label"></label>
+                <label asp-for="Valor"></label>
                 <input asp-for="Valor" class="form-control" />
                 <span asp-validation-for="Valor" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="DataVencimento" class="control-label"></label>
+                <label asp-for="DataVencimento"></label>
                 <input asp-for="DataVencimento" class="form-control" />
                 <span asp-validation-for="DataVencimento" class="text-danger"></span>
             </div>
